sites/muc/applications/external-services/app/extensions/templates/endpoint.yaml
# network
---
apiVersion: v1
kind: Endpoints
metadata:
  name: router-001
subsets:
  - addresses:
      - ip: 10.1.0.1
    ports:
      - name: http
        port: 443
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: switch-001
subsets:
  - addresses:
      - ip: 10.1.10.1
    ports:
      - name: http
        port: 80
        protocol: TCP

# applications
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard
subsets:
  - addresses:
      - ip: 10.1.0.1
    ports:
      - name: http
        port: 3000
        protocol: TCP
