sites/muc/applications/external-services/app/extensions/templates/service.yaml
# network
---
apiVersion: v1
kind: Service
metadata:
  name: router-001
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: switch-001
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

# applications
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
