sites/muc/applications/external-services/app/extensions/templates/ingress.yaml
# network
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name router-001
  annotations:
    cert-manager.io/cluster-issuer: "${INTERNAL_CLUSTER_ISSUER}"
    external-dns.alpha.kubernetes.io/provider: internal
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: &domain router-001.network.${LOCAL_INTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: *name
                port:
                  number: 80
  tls:
    - secretName: router-001-tls-cert
      hosts:
        - *domain
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name switch-001
  annotations:
    cert-manager.io/cluster-issuer: "${INTERNAL_CLUSTER_ISSUER}"
    external-dns.alpha.kubernetes.io/provider: internal
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: &domain switch-001.network.${LOCAL_INTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: *name
                port:
                  number: 80
  tls:
    - secretName: switch-001-tls-cert
      hosts:
        - *domain

# applications
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name adguard
  annotations:
    cert-manager.io/cluster-issuer: "${INTERNAL_CLUSTER_ISSUER}"
    external-dns.alpha.kubernetes.io/provider: internal
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: &domain adguard.${LOCAL_INTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: *name
                port:
                  number: 80
  tls:
    - secretName: adguard-tls-cert
      hosts:
        - *domain
